Implement the score indicator components

--- a/carousel/src/app/components/Dashboard/dashboard.scss
+++ b/carousel/src/app/components/Dashboard/dashboard.scss
@@ -2,4 +2,5 @@ body {
   background: no-repeat top;
   background-size: cover;
   background-image: url('/background--dashboard.png');
+  font-family: sans-serif;
 }
